# caledit

./: AUTHORS  ChangeLog  Makefile  Makefile.in  README  README.md  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
scripts/: Makefile  Makefile.am  Makefile.in  getcal.sh  putcal.sh
src/: Makefile  Makefile.am  Makefile.in  aaaMakefile  calclass.cc  calclass.h  caledit  caledit.cc  eveclass.cc  eveclass.h  functions.cc  functions.h  gui-dialog.cc  gui-dialog.h  gui-mainwindow.cc  gui-mainwindow.h
src/.deps/: caledit-calclass.Po  caledit-caledit.Po  caledit-eveclass.Po  caledit-functions.Po  caledit-gui-dialog.Po  caledit-gui-mainwindow.Po
